--- a/src/components/home.astro
+++ b/src/components/home.astro
@@ -1,7 +1,8 @@
 ---
-import LetterGlitch from "../React/LetterGlitch.tsx";
 import LogoWall from "../components/logoWall.astro";
 import SkillsList from "../React/SkillsList.tsx";
+import { Image } from "astro:assets";
+import image1 from "public/img/P.png";
 ---
 
 <section class="text-[var(--white)] mt-12 md:mt-0" id="home">
@@ -10,73 +11,378 @@ import SkillsList from "../React/SkillsList.tsx";
       <p class="text-md md:text-lg text-[var(--white-icon)] shiny-white">
         Hi, I'm Oscar Hernandez
       </p>
-      <div class="flex flex-col lg:flex-row lg:items-center space-y-4 lg:space-y-0 lg:space-x-8 md:gap-4">
-        <h1 class="text-[var(--white)] text-5xl md:text-6xl font-medium text-pretty leading-none">
+      <div
+        class="flex flex-col lg:flex-row lg:items-center space-y-4 lg:space-y-0 lg:space-x-8 md:gap-4"
+      >
+        <h1
+          class="text-[var(--white)] text-5xl md:text-6xl font-medium text-pretty leading-none"
+        >
           Software <br /> Developer
         </h1>
         <p class="text-md md:text-2xl text-[var(--white-icon)]">
           Transforming ideas into interactive and seamless digital experiences
-          with cutting-edge <span class="text-[var(--sec)] shiny-sec">frontend</span> development.
+          with cutting-edge <span class="text-[var(--sec)] shiny-sec"
+            >frontend</span
+          > development.
         </p>
       </div>
       <div class="flex justify-start gap-2 pt-3 md:pt-6">
-        <a target="_blank" href="https://github.com/gothsec" aria-label="GitHub" class="text-[var(--white-icon)] hover:text-white transition duration-300 ease-in-out border border-1 border-[var(--white-icon-tr)] p-3 rounded-xl bg-[#1414149c] hover:bg-[var(--white-icon-tr)]">
-          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="size-8">
-            <path d="M12.001 2C6.47598 2 2.00098 6.475 2.00098 12C2.00098 16.425 4.86348 20.1625 8.83848 21.4875C9.33848 21.575 9.52598 21.275 9.52598 21.0125C9.52598 20.775 9.51348 19.9875 9.51348 19.15C7.00098 19.6125 6.35098 18.5375 6.15098 17.975C6.03848 17.6875 5.55098 16.8 5.12598 16.5625C4.77598 16.375 4.27598 15.9125 5.11348 15.9C5.90098 15.8875 6.46348 16.625 6.65098 16.925C7.55098 18.4375 8.98848 18.0125 9.56348 17.75C9.65098 17.1 9.91348 16.6625 10.201 16.4125C7.97598 16.1625 5.65098 15.3 5.65098 11.475C5.65098 10.3875 6.03848 9.4875 6.67598 8.7875C6.57598 8.5375 6.22598 7.5125 6.77598 6.1375C6.77598 6.1375 7.61348 5.875 9.52598 7.1625C10.326 6.9375 11.176 6.825 12.026 6.825C12.876 6.825 13.726 6.9375 14.526 7.1625C16.4385 5.8625 17.276 6.1375 17.276 6.1375C17.826 7.5125 17.476 8.5375 17.376 8.7875C18.0135 9.4875 18.401 10.375 18.401 11.475C18.401 15.3125 16.0635 16.1625 13.8385 16.4125C14.201 16.725 14.5135 17.325 14.5135 18.2625C14.5135 19.6 14.501 20.675 14.501 21.0125C14.501 21.275 14.6885 21.5875 15.1885 21.4875C19.259 20.1133 21.9999 16.2963 22.001 12C22.001 6.475 17.526 2 12.001 2Z"></path>
+        <a
+          target="_blank"
+          href="https://github.com/gothsec"
+          aria-label="GitHub"
+          class="text-[var(--white-icon)] hover:text-white transition duration-300 ease-in-out border border-1 border-[var(--white-icon-tr)] p-3 rounded-xl bg-[#1414149c] hover:bg-[var(--white-icon-tr)]"
+        >
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            viewBox="0 0 24 24"
+            fill="currentColor"
+            class="size-8"
+          >
+            <path
+              d="M12.001 2C6.47598 2 2.00098 6.475 2.00098 12C2.00098 16.425 4.86348 20.1625 8.83848 21.4875C9.33848 21.575 9.52598 21.275 9.52598 21.0125C9.52598 20.775 9.51348 19.9875 9.51348 19.15C7.00098 19.6125 6.35098 18.5375 6.15098 17.975C6.03848 17.6875 5.55098 16.8 5.12598 16.5625C4.77598 16.375 4.27598 15.9125 5.11348 15.9C5.90098 15.8875 6.46348 16.625 6.65098 16.925C7.55098 18.4375 8.98848 18.0125 9.56348 17.75C9.65098 17.1 9.91348 16.6625 10.201 16.4125C7.97598 16.1625 5.65098 15.3 5.65098 11.475C5.65098 10.3875 6.03848 9.4875 6.67598 8.7875C6.57598 8.5375 6.22598 7.5125 6.77598 6.1375C6.77598 6.1375 7.61348 5.875 9.52598 7.1625C10.326 6.9375 11.176 6.825 12.026 6.825C12.876 6.825 13.726 6.9375 14.526 7.1625C16.4385 5.8625 17.276 6.1375 17.276 6.1375C17.826 7.5125 17.476 8.5375 17.376 8.7875C18.0135 9.4875 18.401 10.375 18.401 11.475C18.401 15.3125 16.0635 16.1625 13.8385 16.4125C14.201 16.725 14.5135 17.325 14.5135 18.2625C14.5135 19.6 14.501 20.675 14.501 21.0125C14.501 21.275 14.6885 21.5875 15.1885 21.4875C19.259 20.1133 21.9999 16.2963 22.001 12C22.001 6.475 17.526 2 12.001 2Z"
+            ></path>
           </svg>
         </a>
-        <a target="_blank" href="https://linkedin.com/in/hernandezoscar-dev" aria-label="LinkedIn" class="text-[var(--white-icon)] hover:text-white transition duration-300 ease-in-out border border-1 border-[var(--white-icon-tr)] p-3 rounded-xl bg-[#1414149c] hover:bg-[var(--white-icon-tr)]">
-          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="size-8">
-            <path d="M18.3362 18.339H15.6707V14.1622C15.6707 13.1662 15.6505 11.8845 14.2817 11.8845C12.892 11.8845 12.6797 12.9683 12.6797 14.0887V18.339H10.0142V9.75H12.5747V10.9207H12.6092C12.967 10.2457 13.837 9.53325 15.1367 9.53325C17.8375 9.53325 18.337 11.3108 18.337 13.6245V18.339H18.3362ZM7.00373 8.57475C6.14573 8.57475 5.45648 7.88025 5.45648 7.026C5.45648 6.1725 6.14648 5.47875 7.00373 5.47875C7.85873 5.47875 8.55173 6.1725 8.55173 7.026C8.55173 7.88025 7.85798 8.57475 7.00373 8.57475ZM8.34023 18.339H5.66723V9.75H8.34023V18.339ZM19.6697 3H4.32923C3.59498 3 3.00098 3.5805 3.00098 4.29675V19.7033C3.00098 20.4202 3.59498 21 4.32923 21H19.6675C20.401 21 21.001 20.4202 21.001 19.7033V4.29675C21.001 3.5805 20.401 3 19.6675 3H19.6697Z"></path>
+        <a
+          target="_blank"
+          href="https://linkedin.com/in/hernandezoscar-dev"
+          aria-label="LinkedIn"
+          class="text-[var(--white-icon)] hover:text-white transition duration-300 ease-in-out border border-1 border-[var(--white-icon-tr)] p-3 rounded-xl bg-[#1414149c] hover:bg-[var(--white-icon-tr)]"
+        >
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            viewBox="0 0 24 24"
+            fill="currentColor"
+            class="size-8"
+          >
+            <path
+              d="M18.3362 18.339H15.6707V14.1622C15.6707 13.1662 15.6505 11.8845 14.2817 11.8845C12.892 11.8845 12.6797 12.9683 12.6797 14.0887V18.339H10.0142V9.75H12.5747V10.9207H12.6092C12.967 10.2457 13.837 9.53325 15.1367 9.53325C17.8375 9.53325 18.337 11.3108 18.337 13.6245V18.339H18.3362ZM7.00373 8.57475C6.14573 8.57475 5.45648 7.88025 5.45648 7.026C5.45648 6.1725 6.14648 5.47875 7.00373 5.47875C7.85873 5.47875 8.55173 6.1725 8.55173 7.026C8.55173 7.88025 7.85798 8.57475 7.00373 8.57475ZM8.34023 18.339H5.66723V9.75H8.34023V18.339ZM19.6697 3H4.32923C3.59498 3 3.00098 3.5805 3.00098 4.29675V19.7033C3.00098 20.4202 3.59498 21 4.32923 21H19.6675C20.401 21 21.001 20.4202 21.001 19.7033V4.29675C21.001 3.5805 20.401 3 19.6675 3H19.6697Z"
+            ></path>
           </svg>
         </a>
-        <a target="_blank" href="https://mail.google.com/mail/?view=cm&fs=1&to=oscarandreshernandezpineda@gmail.com&su=Hey%20Oscar!" aria-label="Email" class="text-[var(--white-icon)] hover:text-white transition duration-300 ease-in-out border border-1 border-[var(--white-icon-tr)] p-3 rounded-xl bg-[#1414149c] hover:bg-[var(--white-icon-tr)]">
-          <svg xmlns="http://www.w3.org/2000/svg" width="2.1em" height="2.1em" viewBox="0 0 24 24">
-            <path fill="currentColor" d="m18.73 5.41l-1.28 1L12 10.46L6.55 6.37l-1.28-1A2 2 0 0 0 2 7.05v11.59A1.36 1.36 0 0 0 3.36 20h3.19v-7.72L12 16.37l5.45-4.09V20h3.19A1.36 1.36 0 0 0 22 18.64V7.05a2 2 0 0 0-3.27-1.64"/>
+        <a
+          target="_blank"
+          href="https://mail.google.com/mail/?view=cm&fs=1&to=oscarandreshernandezpineda@gmail.com&su=Hey%20Oscar!"
+          aria-label="Email"
+          class="text-[var(--white-icon)] hover:text-white transition duration-300 ease-in-out border border-1 border-[var(--white-icon-tr)] p-3 rounded-xl bg-[#1414149c] hover:bg-[var(--white-icon-tr)]"
+        >
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="2.1em"
+            height="2.1em"
+            viewBox="0 0 24 24"
+          >
+            <path
+              fill="currentColor"
+              d="m18.73 5.41l-1.28 1L12 10.46L6.55 6.37l-1.28-1A2 2 0 0 0 2 7.05v11.59A1.36 1.36 0 0 0 3.36 20h3.19v-7.72L12 16.37l5.45-4.09V20h3.19A1.36 1.36 0 0 0 22 18.64V7.05a2 2 0 0 0-3.27-1.64"
+            ></path>
           </svg>
         </a>
       </div>
     </div>
 
     <LogoWall />
-  
+
     <div class="flex flex-col lg:flex-row items-center gap-8">
       <SkillsList client:load />
-      <div class="flex justify-center md:w-full md:h-[292px] size-[290px] pt-3 md:pt-9 md:ml-16">
-        <LetterGlitch
-          client:load
-          glitchColors={["#5e4491", "#A476FF", "#241a38"]}
-          glitchSpeed={33}
-          centerVignette={false}
-          outerVignette={true}
-          smooth={true}
-        />
+      <div class="flex justify-center md:w-full pt-3 md:pt-9 md:ml-16">
+        <Image src={image1} alt="A description of my image." />
       </div>
+    </div>
+    <div>
+      <p class="text-md md:text-2xl text-[var(--white-icon)]">
+        <span class="text-[var(--sec)] shiny-sec">ออกแบบเสื้อผ้า หมวก</span>
+      </p>
+      <br />
+      <div class="image-gallery">
+        <div class="col">
+          <div class="img-container">
+            <img
+              class="thumbnail"
+              src="/public/img/2.jpg"
+              alt="พิมพ์เสื้อ DTG"
+            />
+          </div>
+        </div>
+        <div class="col">
+          <div class="img-container">
+            <img
+              class="thumbnail"
+              src="/public/img/3.jpg"
+              alt="พิมพ์เสื้อ DTG"
+            />
+          </div>
+        </div>
+        <div class="col">
+          <div class="img-container">
+            <img
+              class="thumbnail"
+              src="/public/img/6.jpg"
+              alt="พิมพ์เสื้อ DFT"
+            />
+          </div>
+        </div>
+        <div class="col">
+          <div class="img-container">
+            <img
+              class="thumbnail"
+              src="/public/img/5.jpg"
+              alt="พิมพ์เสื้อ DFT"
+            />
+          </div>
+        </div>
+        <div class="col">
+          <div class="img-container">
+            <img
+              class="thumbnail"
+              src="/public/img/4.jpg"
+              alt="ไลฟ์สดโซเชียล"
+            />
+          </div>
+        </div>
+        <div class="col">
+          <div class="img-container">
+            <img
+              class="thumbnail"
+              src="/public/img/11.jpg"
+              alt="ภาพถ่ายแฟชั่น"
+            />
+          </div>
+        </div>
+        <div class="col">
+          <div class="img-container">
+            <img
+              class="thumbnail"
+              src="/public/img/10.jpg"
+              alt="ภาพถ่ายแฟชั่น"
+            />
+          </div>
+        </div>
+        <div class="col">
+          <div class="img-container">
+            <img
+              class="thumbnail"
+              src="/public/img/12.jpg"
+              alt="งานขายสินค้าต่างประเทศ"
+            />
+          </div>
+        </div>
+        <div class="col">
+          <div class="img-container">
+            <img
+              class="thumbnail"
+              src="/public/img/13.jpg"
+              alt="งานพิมพ์เสื้อ Eco print"
+            />
+          </div>
+        </div>
+        <div class="col">
+          <div class="img-container">
+            <img
+              class="thumbnail"
+              src="/public/img/14.jpg"
+              alt="งานพิมพ์เสื้อ Eco print"
+            />
+          </div>
+        </div>
+        <div class="col">
+          <div class="img-container">
+            <img
+              class="thumbnail"
+              src="/public/img/7.jpg"
+              alt="คู่มือการสอนเย็บหมวก"
+            />
+          </div>
+        </div>
+        <div class="col">
+          <div class="img-container">
+            <img
+              class="thumbnail"
+              src="/public/img/8.jpg"
+              alt="สร้างแพทเทิร์นหมวกหมวกบักเก็ต"
+            />
+          </div>
+        </div>
+        <div class="col">
+          <div class="img-container">
+            <img
+              class="thumbnail"
+              src="/public/img/wordpress.png"
+              alt="เว็บไซต์ wordpress"
+            />
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div id="myModal" class="modal">
+      <span class="close">&times;</span>
+      <img class="modal-content" id="img01" />
+      <div id="caption"></div>
     </div>
   </div>
 </section>
 
+<script>
+  // Get the modal
+  var modal = document.getElementById("myModal");
+
+  // Get the images and insert them inside the modal
+  var images = document.querySelectorAll(".thumbnail");
+  var modalImg = document.getElementById("img01") as HTMLImageElement; // กำหนดประเภทเป็น HTMLImageElement
+  var captionText = document.getElementById("caption");
+
+  // ตรวจสอบให้ `image` เป็น HTMLImageElement
+  images.forEach(function (image) {
+    (image as HTMLImageElement).onclick = function () {
+      modal.style.display = "block";
+      modalImg.src = (this as HTMLImageElement).src;
+      captionText.innerHTML = (this as HTMLImageElement).alt;
+    };
+  });
+
+  // Get the <span> element to close the modal
+  var span = document.getElementsByClassName("close")[0] as HTMLSpanElement; // ใช้ type assertion เพื่อบอกว่าเป็น HTMLSpanElement
+
+  span.onclick = function () {
+    modal.style.display = "none";
+  };
+</script>
+
 <style is:global>
-.shiny-sec {
-    background: linear-gradient(
-        135deg,
-        #A476FF 25%,
-        #eee5ff 50%,
-        #A476FF 75%
-    );
+  .image-gallery {
+    display: grid; /* ใช้ grid layout */
+    grid-template-columns: repeat(
+      auto-fill,
+      minmax(200px, 1fr)
+    ); /* ทำให้คอลัมน์มีขนาดอัตโนมัติ */
+    gap: 10px; /* ช่องว่างระหว่างภาพ */
+  }
+
+  .img-container {
+    height: 300px; /* กำหนดความสูงให้เป็นแนวตั้ง */
+    overflow: hidden; /* ซ่อนส่วนที่เกินกรอบ */
+    border: 2px solid #ccc; /* กรอบรอบภาพ */
+    border-radius: 10px; /* ทำมุมโค้งให้กับกรอบ */
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* เงารอบๆ กรอบ */
+  }
+
+  .thumbnail {
+    width: 100%;
+    height: 100%;
+    object-fit: cover; /* ทำให้ภาพยืดเต็มกรอบโดยไม่เสียสัดส่วน */
+    border-radius: 10px;
+    transition: all 0.3s ease;
+  }
+
+  .thumbnail:hover {
+    transform: scale(1.05); /* ขยายภาพเมื่อเอาเมาส์ไปวาง */
+    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2); /* เพิ่มเงาเมื่อ hover */
+  }
+
+  .shiny-sec {
+    background: linear-gradient(135deg, #a476ff 25%, #eee5ff 50%, #a476ff 75%);
     background-size: 400% 100%;
     -webkit-background-clip: text;
     background-clip: text;
     color: transparent;
     animation: shine 3s linear infinite;
-}
+  }
 
-@keyframes shine {
+  @keyframes shine {
     0% {
-        background-position: 100% 50%;
+      background-position: 100% 50%;
     }
-    30%, 70% {
-        background-position: 0% 50%;
+    30%,
+    70% {
+      background-position: 0% 50%;
     }
-}
+  }
+
+  .modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    padding-top: 100px; /* Location of the box */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0, 0, 0); /* Fallback color */
+    background-color: rgba(0, 0, 0, 0.9); /* Black w/ opacity */
+  }
+
+  /* Modal Content (image) */
+  .modal-content {
+    margin: auto;
+    display: block;
+    width: 80%;
+    max-width: 700px;
+  }
+
+  /* Caption of Modal Image */
+  #caption {
+    margin: auto;
+    display: block;
+    width: 80%;
+    max-width: 700px;
+    text-align: center;
+    color: #ccc;
+    padding: 10px 0;
+    height: 150px;
+  }
+
+  /* Add Animation */
+  .modal-content,
+  #caption {
+    -webkit-animation-name: zoom;
+    -webkit-animation-duration: 0.6s;
+    animation-name: zoom;
+    animation-duration: 0.6s;
+  }
+
+  @-webkit-keyframes zoom {
+    from {
+      -webkit-transform: scale(0);
+    }
+    to {
+      -webkit-transform: scale(1);
+    }
+  }
+
+  @keyframes zoom {
+    from {
+      transform: scale(0);
+    }
+    to {
+      transform: scale(1);
+    }
+  }
+
+  /* The Close Button */
+  .close {
+    position: absolute;
+    top: 15px;
+    right: 35px;
+    color: #f1f1f1;
+    font-size: 40px;
+    font-weight: bold;
+    transition: 0.3s;
+  }
+
+  .close:hover,
+  .close:focus {
+    color: #bbb;
+    text-decoration: none;
+    cursor: pointer;
+  }
+
+  /* 100% Image Width on Smaller Screens */
+  @media only screen and (max-width: 700px) {
+    .modal-content {
+      width: 100%;
+    }
+  }
 </style>
