--- a/src/components/contact.astro
+++ b/src/components/contact.astro
@@ -1,16 +1,12 @@
 
 <section id="contact" class="w-full py-12 border-t border-[#ffffff10]">
   <div class="max-w-5xl mx-auto">
-    <h2 class="text-lg text-[var(--sec)] mb-2 shiny-sec">Let's talk</h2>
+    <h2 class="text-lg text-[var(--sec)] mb-2 shiny-sec">ติดต่อเลย !</h2>
     <h3 class="text-4xl md:text-5xl font-medium text-[var(--white)] mb-6">Contact</h3>
       <div class="text-[var(--white-icon)]">
         <p class="mb-4">
-          Have a question or a project in mind? Feel free to reach out.
+          ติดต่อผ่านทางไลน์ <a href="https://lin.ee/NPhhPvs">@609xtgep</a> เนื่องจากไม่สามารถวางเบอร์ติดต่อบนเว็บไซต์ได้ เพื่อความเป็นส่วนตัว ขออภัยในความไม่สะดวก. 
         </p>
-        <div class="flex items-center gap-2">
-          <span>Location:</span>
-          <span class="text-[var(--white)]">Colombia, Valle del cauca</span>
-        </div>
       </div>
     </div>
   </div>
