--- a/src/components/logoWall.astro
+++ b/src/components/logoWall.astro
@@ -1,5 +1,12 @@
 ---
 const technologies = [
+  "photoshop",
+  "illustrator",
+  "aftereffects",
+  "premiere",
+  "animate",
+  "dreamweaver",
+  "lightroom",
   "astro",
   "react",
   "typeScript",
@@ -9,9 +16,6 @@ const technologies = [
   "CSS3",
   "javaScript",
   "git",
-  "supabase",
-  "mysql",
-  "bash"
 ];
 ---
 
