--- a/src/components/footer.astro
+++ b/src/components/footer.astro
@@ -5,7 +5,7 @@ import LikeButton from "../React/LikeButton.tsx";
 <footer class="w-full py-12 border-t border-[#ffffff10]">
       <p class="text-center text-sm text-[var(--white-icon)] space-y-2">
         <!-- If you are using this template, by MIT License you can't remove the copyright notice -->
-        <span class="block sm:inline">Copyright © 2025 <a href="https://github.com/Gothsec">Oscar Hernandez</a>. All rights reserved.</span>
+        <span class="block sm:inline">Copyright © 2025 <a href="https://github.com/Gothsec">Portfolio Supunsa</a>. All rights reserved.</span>
       </p>
     </div>
   </div>
