--- a/src/components/projects.astro
+++ b/src/components/projects.astro
@@ -103,4 +103,14 @@ const projects: Project[] = [
       </svg>
     </a>
   </div>
+  <br />
+  <p class="text-md md:text-2xl text-[var(--white-icon)]">
+          ขยันมั่นเรียนรู้ ยอมรับความผิดพลาดและปรับปรุงแก้ไข ประสบการณ์ต่าง ๆ
+          ได้รับจาก <span class="text-[var(--sec)] shiny-sec"
+            >สถานประกอบการณ์ และลูกค้า</span
+          > ทำให้รูปแบบงานผิดพลาดน้อยลง.
+        </p>
+        <span class="text-lg text-[var(--sec)] shiny-sec"
+          >ไม่มีคนที่สมบูรณ์ตั้งแต่ต้น แต่เติบโตด้วยความผิดพลาด . . .</span
+        >
 </section>
