--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,7 +10,7 @@ import Footer from "../components/footer.astro";
 <Layout title="Oscar Hernandez">
   <Nav />
   <Home />
-  <Projects />
+  <!-- <Projects /> -->
   <Contact />
   <Footer />
 </Layout>
