--- a/src/components/home.astro
+++ b/src/components/home.astro
@@ -61,7 +61,7 @@ import image1 from "public/img/P.png";
           <div class="img-container">
             <img
               class="thumbnail"
-              src="/public/img/2.jpg"
+              src="/img/2.jpg"
               alt="พิมพ์เสื้อ DTG"
             />
           </div>
@@ -70,7 +70,7 @@ import image1 from "public/img/P.png";
           <div class="img-container">
             <img
               class="thumbnail"
-              src="/public/img/3.jpg"
+              src="/img/3.jpg"
               alt="พิมพ์เสื้อ DTG"
             />
           </div>
@@ -79,7 +79,7 @@ import image1 from "public/img/P.png";
           <div class="img-container">
             <img
               class="thumbnail"
-              src="/public/img/6.jpg"
+              src="/img/6.jpg"
               alt="พิมพ์เสื้อ DFT"
             />
           </div>
@@ -88,7 +88,7 @@ import image1 from "public/img/P.png";
           <div class="img-container">
             <img
               class="thumbnail"
-              src="/public/img/5.jpg"
+              src="/img/5.jpg"
               alt="พิมพ์เสื้อ DFT"
             />
           </div>
@@ -97,7 +97,7 @@ import image1 from "public/img/P.png";
           <div class="img-container">
             <img
               class="thumbnail"
-              src="/public/img/4.jpg"
+              src="/img/4.jpg"
               alt="ไลฟ์สดโซเชียล"
             />
           </div>
@@ -106,7 +106,7 @@ import image1 from "public/img/P.png";
           <div class="img-container">
             <img
               class="thumbnail"
-              src="/public/img/11.jpg"
+              src="/img/11.jpg"
               alt="ภาพถ่ายแฟชั่น"
             />
           </div>
@@ -115,7 +115,7 @@ import image1 from "public/img/P.png";
           <div class="img-container">
             <img
               class="thumbnail"
-              src="/public/img/10.jpg"
+              src="/img/10.jpg"
               alt="ภาพถ่ายแฟชั่น"
             />
           </div>
@@ -124,7 +124,7 @@ import image1 from "public/img/P.png";
           <div class="img-container">
             <img
               class="thumbnail"
-              src="/public/img/9.jpg"
+              src="/img/9.jpg"
               alt="ภาพถ่ายแฟชั่น"
             />
           </div>
@@ -133,7 +133,7 @@ import image1 from "public/img/P.png";
           <div class="img-container">
             <img
               class="thumbnail"
-              src="/public/img/12.jpg"
+              src="/img/12.jpg"
               alt="งานขายสินค้าต่างประเทศ"
             />
           </div>
@@ -142,7 +142,7 @@ import image1 from "public/img/P.png";
           <div class="img-container">
             <img
               class="thumbnail"
-              src="/public/img/13.jpg"
+              src="/img/13.jpg"
               alt="งานพิมพ์เสื้อ Eco print"
             />
           </div>
@@ -151,7 +151,7 @@ import image1 from "public/img/P.png";
           <div class="img-container">
             <img
               class="thumbnail"
-              src="/public/img/14.jpg"
+              src="/img/14.jpg"
               alt="งานพิมพ์เสื้อ Eco print"
             />
           </div>
@@ -160,7 +160,7 @@ import image1 from "public/img/P.png";
           <div class="img-container">
             <img
               class="thumbnail"
-              src="/public/img/7.jpg"
+              src="/img/7.jpg"
               alt="คู่มือการสอนเย็บหมวก"
             />
           </div>
@@ -169,7 +169,7 @@ import image1 from "public/img/P.png";
           <div class="img-container">
             <img
               class="thumbnail"
-              src="/public/img/8.jpg"
+              src="/img/8.jpg"
               alt="สร้างแพทเทิร์นหมวกหมวกบักเก็ต"
             />
           </div>
@@ -178,7 +178,7 @@ import image1 from "public/img/P.png";
           <div class="img-container">
             <img
               class="thumbnail"
-              src="/public/img/wordpress.png"
+              src="/img/wordpress.png"
               alt="เว็บไซต์ wordpress"
             />
           </div>
