--- a/src/components/home.astro
+++ b/src/components/home.astro
@@ -31,7 +31,7 @@ import image1 from "public/img/P.png";
         </h1>
         <p>๐ ระดับการศึกษาประกาศนียบัตรวิชาชีพ <span class="text-[var(--sec)] shiny-sec">(ปวช.)</span> แผนกศิลปกรรม สาขาคอมพิวเตอร์กราฟิกอาร์ต จากวิทยาลัยอาชีวศึกษานครปฐม
         <br />๐ ระดับการศึกษาประกาศนียบัตรวิชาชีพชั้นสูง <span class="text-[var(--sec)] shiny-sec">(ปวส.)</span> แผนกศิลปกรรม สาขาคอมพิวเตอร์กราฟิก จากวิทยาลัยอาชีวศึกษานครปฐม
-        <br />๐ ระดับการศึกษา <span class="text-[var(--sec)] shiny-sec">ปริญญาตรี</span> คณะศิลปกรรม สาขาขาดิจกัลกราฟิก จากสถาบับการอาชีวศึกษาภาคลาง 4 วิทยาลัยอาชีวศึกษานครปฐม
+        <br />๐ ระดับการศึกษา <span class="text-[var(--sec)] shiny-sec">ปริญญาตรี</span> คณะศิลปกรรม สาขาดิจกัลกราฟิก จากสถาบันการอาชีวศึกษาภาคลาง 4 วิทยาลัยอาชีวศึกษานครปฐม
         </p>
 
         <h1 class="text-[var(--white)] md:text-2xl font-medium text-pretty leading-none"
@@ -51,147 +51,6 @@ import image1 from "public/img/P.png";
         <Image src={image1} alt="A description of my image." />
       </div>
     </div>
-    <div>
-      <p class="text-md md:text-2xl text-[var(--white-icon)]">
-        <span class="text-[var(--sec)] shiny-sec">ออกแบบเสื้อผ้า หมวก</span>
-      </p>
-      <br />
-      <div class="image-gallery">
-        <div class="col">
-          <div class="img-container">
-            <img
-              class="thumbnail"
-              src="/img/2.jpg"
-              alt="พิมพ์เสื้อ DTG"
-            />
-          </div>
-        </div>
-        <div class="col">
-          <div class="img-container">
-            <img
-              class="thumbnail"
-              src="/img/3.jpg"
-              alt="พิมพ์เสื้อ DTG"
-            />
-          </div>
-        </div>
-        <div class="col">
-          <div class="img-container">
-            <img
-              class="thumbnail"
-              src="/img/6.jpg"
-              alt="พิมพ์เสื้อ DFT"
-            />
-          </div>
-        </div>
-        <div class="col">
-          <div class="img-container">
-            <img
-              class="thumbnail"
-              src="/img/5.jpg"
-              alt="พิมพ์เสื้อ DFT"
-            />
-          </div>
-        </div>
-        <div class="col">
-          <div class="img-container">
-            <img
-              class="thumbnail"
-              src="/img/4.jpg"
-              alt="ไลฟ์สดโซเชียล"
-            />
-          </div>
-        </div>
-        <div class="col">
-          <div class="img-container">
-            <img
-              class="thumbnail"
-              src="/img/11.jpg"
-              alt="ภาพถ่ายแฟชั่น"
-            />
-          </div>
-        </div>
-        <div class="col">
-          <div class="img-container">
-            <img
-              class="thumbnail"
-              src="/img/10.jpg"
-              alt="ภาพถ่ายแฟชั่น"
-            />
-          </div>
-        </div>
-        <div class="col">
-          <div class="img-container">
-            <img
-              class="thumbnail"
-              src="/img/9.jpg"
-              alt="ภาพถ่ายแฟชั่น"
-            />
-          </div>
-        </div>
-        <div class="col">
-          <div class="img-container">
-            <img
-              class="thumbnail"
-              src="/img/12.jpg"
-              alt="งานขายสินค้าต่างประเทศ"
-            />
-          </div>
-        </div>
-        <div class="col">
-          <div class="img-container">
-            <img
-              class="thumbnail"
-              src="/img/13.jpg"
-              alt="งานพิมพ์เสื้อ Eco print"
-            />
-          </div>
-        </div>
-        <div class="col">
-          <div class="img-container">
-            <img
-              class="thumbnail"
-              src="/img/14.jpg"
-              alt="งานพิมพ์เสื้อ Eco print"
-            />
-          </div>
-        </div>
-        <div class="col">
-          <div class="img-container">
-            <img
-              class="thumbnail"
-              src="/img/7.jpg"
-              alt="คู่มือการสอนเย็บหมวก"
-            />
-          </div>
-        </div>
-        <div class="col">
-          <div class="img-container">
-            <img
-              class="thumbnail"
-              src="/img/8.jpg"
-              alt="สร้างแพทเทิร์นหมวกหมวกบักเก็ต"
-            />
-          </div>
-        </div>
-        <div class="col">
-          <div class="img-container">
-            <img
-              class="thumbnail"
-              src="/img/wordpress.png"
-              alt="เว็บไซต์ wordpress"
-            />
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <div id="myModal" class="modal">
-      <span class="close">&times;</span>
-      <img class="modal-content" id="img01" />
-      <div id="caption"></div>
-    </div>
-  </div>
 </section>
 
 <script>
