--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,6 +3,8 @@ import Layout from "../layouts/Layout.astro";
 import Nav from "../components/nav.astro";
 import Home from "../components/home.astro";
 import Projects from "../components/projects.astro";
+import WEB from "../components/WEB.astro";
+import Design from "@/components/design.astro";
 import Contact from "@/components/contact.astro";
 import Footer from "../components/footer.astro";
 ---
@@ -10,7 +12,9 @@ import Footer from "../components/footer.astro";
 <Layout title="Oscar Hernandez">
   <Nav />
   <Home />
-  <!-- <Projects /> -->
+  <Design />
+  <Projects />
+  <WEB />
   <Contact />
   <Footer />
 </Layout>
