--- a/src/components/contact.astro
+++ b/src/components/contact.astro
@@ -1,22 +1,25 @@
-
 <section id="contact" class="w-full py-12 border-t border-[#ffffff10]">
   <div class="max-w-5xl mx-auto">
     <h2 class="text-lg text-[var(--sec)] mb-2 shiny-sec">ติดต่อเลย !</h2>
-    <h3 class="text-4xl md:text-5xl font-medium text-[var(--white)] mb-6">Contact</h3>
-      <div class="text-[var(--white-icon)]">
-        <p class="mb-4">
-          ติดต่อผ่านทางไลน์ <a href="https://lin.ee/NPhhPvs">@609xtgep</a> เนื่องจากไม่สามารถวางเบอร์ติดต่อบนเว็บไซต์ได้ เพื่อความเป็นส่วนตัว ขออภัยในความไม่สะดวก. 
-        </p>
-      </div>
+    <h3 class="text-4xl md:text-5xl font-medium text-[var(--white)] mb-6">
+      Contact
+    </h3>
+    <div class="text-[var(--white-icon)]">
+      <p class="mb-4">
+        ติดต่อผ่านทางไลน์ <a
+          class="text-lg text-[var(--sec)] mb-2 shiny-sec"
+          href="https://lin.ee/NPhhPvs">@609xtgep</a
+        > เนื่องจากไม่สามารถวางเบอร์ติดต่อบนเว็บไซต์ได้ เพื่อความเป็นส่วนตัว ขออภัยในความไม่สะดวก.
+      </p>
     </div>
   </div>
 </section>
 
 <script type="module" is:inline>
-  const form = document.getElementById('contact-form');
-  const formMessage = document.getElementById('form-message');
+  const form = document.getElementById("contact-form");
+  const formMessage = document.getElementById("form-message");
 
-  form.addEventListener('submit', async (e) => {
+  form.addEventListener("submit", async (e) => {
     e.preventDefault();
     const formData = new FormData(form);
 
@@ -24,20 +27,20 @@
       const response = await fetch(form.action, {
         method: "POST",
         body: formData,
-        headers: { "Accept": "application/json" }
+        headers: { Accept: "application/json" },
       });
       if (response.ok) {
         form.reset();
-        form.style.display = 'none';
-        formMessage.classList.remove('hidden');
+        form.style.display = "none";
+        formMessage.classList.remove("hidden");
       } else {
         const data = await response.json();
-        console.error('Error response:', data);
-        alert('There was a problem sending your message.');
+        console.error("Error response:", data);
+        alert("There was a problem sending your message.");
       }
     } catch (error) {
-      console.error('Error:', error);
-      alert('There was a problem sending your message.');
+      console.error("Error:", error);
+      alert("There was a problem sending your message.");
     }
   });
 </script>
